traversal.snake.Snake.scala.error
Compilation error:
Snake:14: error: ')' expected but 'else' found.
  } else if ((estFaceMur) && (getDirection() == Direction.OUEST)) {
    ^Snake:27: error: ')' expected but 'else' found.
  } else if (getDirection() == Direction.EST) {
    ^